--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,35 +5,26 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DSRRR - 平价 AI 编码中转站</title>
-    <meta
-      name="description"
-      content="DSRRR（dsrrr.com）提供一个 API Key 即可接入 Claude Code、Codex CLI、Gemini CLI、Cursor 等 AI 编码工具。透明计费、用量实时可见，支持限额保护与多模型切换。"
-    />
+    <title>__SEO_TITLE__</title>
+    <meta name="description" content="__SEO_DESCRIPTION__" />
     <meta
       name="keywords"
-      content="DSRRR, dsrrr.com, AI 编码中转站, Vibe Coding, Claude Code, Codex CLI, Gemini CLI, Cursor, OpenCode, API Key, 透明定价, 用量统计, 限额"
+      content="AI 编码中转站, Vibe Coding, Claude Code, Codex CLI, Gemini CLI, Cursor, OpenCode, API Key, 透明定价, 用量统计, 限额"
     />
     <meta name="robots" content="index,follow" />
-    <link rel="canonical" href="/home" />
+    <link rel="canonical" href="/" />
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="DSRRR - 平价 AI 编码中转站" />
-    <meta
-      property="og:description"
-      content="One API key for Claude Code, Codex CLI, Gemini CLI, and Cursor — transparent billing, real-time usage, and safety limits."
-    />
-    <meta property="og:image" content="/logo.png" />
+    <meta property="og:title" content="__SEO_TITLE__" />
+    <meta property="og:description" content="__SEO_DESCRIPTION__" />
+    <meta property="og:image" content="__SEO_IMAGE__" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="DSRRR - AI Coding Relay" />
-    <meta
-      name="twitter:description"
-      content="One API key for Claude Code, Codex CLI, Gemini CLI, and Cursor — transparent billing, real-time usage, and safety limits."
-    />
-    <meta name="twitter:image" content="/logo.png" />
+    <meta name="twitter:title" content="__SEO_TITLE__" />
+    <meta name="twitter:description" content="__SEO_DESCRIPTION__" />
+    <meta name="twitter:image" content="__SEO_IMAGE__" />
 
     <!-- Structured data (runtime updated) -->
     <script id="structured-data" type="application/ld+json">{}</script>
