feat:完成继续支付功能

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,7 +27,7 @@
     <meta name="twitter:image" content="__SEO_IMAGE__" />
 
     <!-- Structured data (runtime updated) -->
-    <script id="structured-data" type="application/ld+json">{}</script>
+    <script id="structured-data" type="application/ld+json" nonce="__CSP_NONCE_VALUE__">{}</script>
   </head>
   <body>
     <div id="app"></div>
