--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,29 +5,36 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>__SEO_TITLE__</title>
-    <meta name="description" content="__SEO_DESCRIPTION__" />
+    <title>Claude Code API - 官方直连 满血不降智 | AI编程助手</title>
+    <meta name="description" content="Claude Code 官方 API 直连服务，支持 Opus 4.5、Sonnet 4.5 满血模型。套餐低至 ¥9.9，充值最高送 80%。快速响应、稳定可靠、明码标价。" />
     <meta
       name="keywords"
-      content="AI 编码中转站, Vibe Coding, Claude Code, Codex CLI, Gemini CLI, Cursor, OpenCode, API Key, 透明定价, 用量统计, 限额"
+      content="Claude Code, Claude API, AI编程助手, Opus 4.5, Sonnet 4.5, API直连, 编程助手, Vibe Coding, Codex CLI, Gemini CLI, Cursor"
     />
     <meta name="robots" content="index,follow" />
     <link rel="canonical" href="/" />
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="__SEO_TITLE__" />
-    <meta property="og:description" content="__SEO_DESCRIPTION__" />
-    <meta property="og:image" content="__SEO_IMAGE__" />
+    <meta property="og:locale" content="zh_CN" />
+    <meta property="og:title" content="Claude Code API - 官方直连 满血不降智" />
+    <meta property="og:description" content="Claude Code 官方 API 直连服务，支持 Opus 4.5、Sonnet 4.5 满血模型。套餐低至 ¥9.9，充值最高送 80%。" />
+    <meta property="og:image" content="/logo.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="__SEO_TITLE__" />
-    <meta name="twitter:description" content="__SEO_DESCRIPTION__" />
-    <meta name="twitter:image" content="__SEO_IMAGE__" />
+    <meta name="twitter:title" content="Claude Code API - 官方直连 满血不降智" />
+    <meta name="twitter:description" content="Claude Code 官方 API 直连服务，支持 Opus 4.5、Sonnet 4.5 满血模型。套餐低至 ¥9.9，充值最高送 80%。" />
+    <meta name="twitter:image" content="/logo.png" />
 
     <!-- Structured data (runtime updated) -->
-    <script id="structured-data" type="application/ld+json" nonce="__CSP_NONCE_VALUE__">{}</script>
+    <script id="structured-data" type="application/ld+json">{
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Claude Code API",
+      "description": "Claude Code 官方 API 直连服务，支持 Opus 4.5、Sonnet 4.5 满血模型",
+      "inLanguage": "zh-CN"
+    }</script>
   </head>
   <body>
     <div id="app"></div>
