feat 默认为码驿站

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,8 +2,8 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg?v=2" />
+    <link rel="icon" type="image/png" href="/logo.png?v=2" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Claude Code API - 官方直连 满血不降智 | AI编程助手</title>
     <meta name="description" content="Claude Code 官方 API 直连服务，支持 Opus 4.5、Sonnet 4.5 满血模型。套餐低至 ¥9.9，充值最高送 80%。快速响应、稳定可靠、明码标价。" />
@@ -19,13 +19,13 @@
     <meta property="og:locale" content="zh_CN" />
     <meta property="og:title" content="Claude Code API - 官方直连 满血不降智" />
     <meta property="og:description" content="Claude Code 官方 API 直连服务，支持 Opus 4.5、Sonnet 4.5 满血模型。套餐低至 ¥9.9，充值最高送 80%。" />
-    <meta property="og:image" content="/logo.png" />
+    <meta property="og:image" content="/logo.png?v=2" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Claude Code API - 官方直连 满血不降智" />
     <meta name="twitter:description" content="Claude Code 官方 API 直连服务，支持 Opus 4.5、Sonnet 4.5 满血模型。套餐低至 ¥9.9，充值最高送 80%。" />
-    <meta name="twitter:image" content="/logo.png" />
+    <meta name="twitter:image" content="/logo.png?v=2" />
 
     <!-- Structured data (runtime updated) -->
     <script id="structured-data" type="application/ld+json">{
