--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,26 +12,28 @@
       content="Claude Code, Claude API, AI编程助手, Opus 4.5, Sonnet 4.5, API直连, 编程助手, Vibe Coding, Codex CLI, Gemini CLI, Cursor"
     />
     <meta name="robots" content="index,follow" />
-    <link rel="canonical" href="/" />
+    <link rel="canonical" href="https://dsrrr.com/" />
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://dsrrr.com/" />
     <meta property="og:locale" content="zh_CN" />
     <meta property="og:title" content="Claude Code API - 官方直连 满血不降智" />
     <meta property="og:description" content="Claude Code 官方 API 直连服务，支持 Opus 4.5、Sonnet 4.5 满血模型。套餐低至 ¥9.9，充值最高送 80%。" />
-    <meta property="og:image" content="/logo.png?v=2" />
+    <meta property="og:image" content="https://dsrrr.com/logo.png?v=2" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Claude Code API - 官方直连 满血不降智" />
     <meta name="twitter:description" content="Claude Code 官方 API 直连服务，支持 Opus 4.5、Sonnet 4.5 满血模型。套餐低至 ¥9.9，充值最高送 80%。" />
-    <meta name="twitter:image" content="/logo.png?v=2" />
+    <meta name="twitter:image" content="https://dsrrr.com/logo.png?v=2" />
 
     <!-- Structured data (runtime updated) -->
     <script id="structured-data" type="application/ld+json">{
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "Claude Code API",
+      "url": "https://dsrrr.com/",
       "description": "Claude Code 官方 API 直连服务，支持 Opus 4.5、Sonnet 4.5 满血模型",
       "inLanguage": "zh-CN"
     }</script>
